--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "noImplicitAny": false,
     "module": "commonjs",
     "target": "es5",
-    "allowJs": true,
+    "declaration": true,
+    "sourceMap": true,
     "lib": [
       "es2016"
     ]
