--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
   "homepage": "https://github.com/kato/kato-client-js#readme",
   "devDependencies": {
     "@types/node": "^10.12.12",
-    "axios": "^0.18.0",
     "clean-webpack-plugin": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "merge-options": "^1.0.1",
     "ts-loader": "^5.3.1",
     "typescript": "^3.2.1",
     "webpack": "^4.27.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "merge-options": "^1.0.1"
   }
 }
