--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dayjs": "^1.7.7",
-    "merge-options": "^1.0.1"
+    "merge-options": "^1.0.1",
+    "query-string": "^6.2.0"
   }
 }
